# sokol-template

./: .clang-format  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.c
